# cookiecutter-uv

./: CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.devcontainer/: postCreateCommand.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/workflows/: main.yml  update-dependencies.yml
cookiecutter_uv/: __init__.py  cli.py
cookiecutter_uv/cicd/: cli.py  config.py  fetchers.py  updaters.py
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: devcontainer.md  linting.md  makefile.md  tox.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cicd.py  test_cookiecutter.py  test_generated_project_root.py  utils.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py
